Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -1,7 +1,8 @@
-###  Brave: Guts, Grace and Glory
-tags:: [[cci/services/sundays]] 
-theme:: Courage, Guts
-title:: Brave: Guts, Grace and Glory
+- ###  Brave: Guts, Grace and Glory
+  tags:: [[cci/services/sundays]]
+  theme:: Courage, Guts
+  title:: Brave: Guts, Grace and Glory
+  collapsed:: true
 	- Notes
 		- Within the confines of salvation, grace is always enough, but in the journey of faith, Grace may not be enough.
 		- Grace gives an ability to labour, infusing the strength to labour
@@ -23,4 +24,5 @@ title:: Brave: Guts, Grace and Glory
 	- X _
 		- Handle bravery wihb preparation
 		-
+-
 -
