Logseq auto save

--- a/journals/2021_11_12.md
+++ b/journals/2021_11_12.md
@@ -1,11 +1,11 @@
 - Templates
-	- Podcast
+	- Podcast: 
 	  Name::
 	  Title::
 	  Type:: podcast
 	  Date::
 	  Comment::
-	- Book
+	- Book: 
 	  Title::
 	  Format::
 	  Chapter::
