Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -24,9 +24,9 @@
 	- X _
 		- Handle bravery wihb preparation
 		-
-- Article: 
+- Article: Salary Negotiation
   Title::
-  Url::
-  Author::
-  Date::
--
+  Url:: https://www.lennysnewsletter.com/p/negotiating-comp?
+  Author:: 
+  Date:: [[Nov 14th, 2021]]
+	-
