Logseq auto save

--- a/journals/2021_11_14.md
+++ b/journals/2021_11_14.md
@@ -29,4 +29,7 @@
   Url:: https://www.lennysnewsletter.com/p/negotiating-comp?
   Author:: 
   Date:: [[Nov 14th, 2021]]
-	- Initial offer comes in top-of-band: There was likely a discussion about giving you a higher level.  Many times in this case, you can push for an “out-of-band” offer — essentially getting paid for an L7 while you’re an L6.
+	- Initial offer comes in top-of-band: There was likely a discussion about giving you a higher level. 
+	  #+BEGIN_QUOTE
+	  Many times in this case, you can push for an “out-of-band” offer — essentially getting paid for an L7 while you’re an L6.
+	  #+END_QUOTE
