--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -1,3 +1,3 @@
 - Discussion with Simon Doyle
 	- Indicate interest in Digital Futures/Digital Twin programme
-	- While this may not be common knowledge yet, I have a background in control and automation
+	- While this may not be common knowledge, I have a background in control and automation.
