Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -1,4 +1,4 @@
 - Discussion with Simon Doyle
 	- Indicate interest in Digital Futures/Digital Twin programme
 	- While this may not be common knowledge, I have a background in control and automation. And that's how I found industry 4.0 and digitalisation.
-	-
+	- Saw the scale on which this new
