--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -2,5 +2,6 @@
 	- Indicate interest in Digital Futures/Digital Twin programme
 	- Reason being
 		- While this may not be common knowledge, I have a background in control and automation - I did a lot of solutions architecture. And that's how I found industry 4.0 and digitalisation.
-		- Saw the scale in which the technologies ushered in via the current industrial revolution could impact
+		- Saw the scale in which the technologies ushered in via the next industrial revolution could impact.
+		-
 -
