Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -3,5 +3,5 @@
 	- Reason being
 		- While this may not be common knowledge, I have a background in control and automation - I did a lot of solutions architecture. And that's how I found industry 4.0 and digitalisation.
 		- Saw the scale in which the technologies ushered in via the next industrial revolution could impact.
-		- But what drew me most about it was
+		- But the most striking thing about this was that if got me interested in industries, Transport being one of them
 -
