Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -5,3 +5,5 @@
 		- Saw the scale in which the technologies ushered in via the next industrial revolution could impact.
 		- But the most striking thing about this was that if got me interested in industries other than manufacturing and oil & gas, Transport being one of them.
 -
+- Hapms code
+	- Handle
