Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -6,5 +6,6 @@
 		- But the most striking thing about this was that if got me interested in industries other than manufacturing and oil & gas, Transport being one of them.
 -
 - Hapms code
-	- Traverse through and find
+	- Traverse through and find all neighbors
+	-
 -
