--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -8,5 +8,6 @@
 - Hapms code
 	- Traverse through and find all neighbors
 	- Build traverse class or iterator?
+		- Class can handle iterator
 		-
 -
