Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -9,5 +9,6 @@
 	- Traverse through and find all neighbors
 	- Build traverse class or iterator?
 		- Class handles iterator
+	- Method should have number of traversing
 	-
 -
