Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -10,5 +10,5 @@
 	- Build traverse class or iterator?
 		- Class handles iterator
 	- Method should have number of traversing
-	-
+	- Can be used to
 -
