Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -9,6 +9,7 @@
 	- Traverse through and find all neighbors
 	- Build traverse class or iterator?
 		- Class handles iterator
-	- Method should have number of traversing
+	- Method should have number of traverses
+	- Have previous and next method.
 	- Can be used to identify clusters of bad road.
 -
