Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -10,6 +10,6 @@
 	- Build traverse class or iterator?
 		- Class handles iterator
 	- Method should have number of traverses
-	- Have previous and next methods outputing
+	- Have previous and next HAPMS methods
 	- Can be used to identify clusters of bad road.
 -
