Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -11,5 +11,5 @@
 		- Class handles iterator
 	- Method should have number of traverses
 	- Have previous and next HAPMS methods
-	- Can be used to identify clusters of bad road.
--
+	- > Can be used to identify clusters of bad road.
+	-
