Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -12,4 +12,5 @@
 	- Method should have number of traverses
 	- Have previous and next HAPMS methods
 	- > Can be used to identify clusters of bad road.
-	- Set index as
+	- Set index as Hapms section name.
+	-
