Logseq auto save

--- a/journals/2021_11_16.md
+++ b/journals/2021_11_16.md
@@ -13,5 +13,6 @@
 	- Have previous and next HAPMS methods
 	- > Can be used to identify clusters of bad road.
 	- Set index as Hapms section name.
+	- Average entry speed, average exit speed
 	-
 	-
