Logseq auto save

--- a/journals/2021_09_26.md
+++ b/journals/2021_09_26.md
@@ -1,5 +1,6 @@
 - PKM/Workflow
 	- Maintain list of current projects
+	  id:: 619a149a-b07c-4551-bba7-778639ef3045
 		- Add running, halted, finished property
 		- A project is a page with specific property types and values
 	- Maintain list of todos, scheduled and running tasks. _Anything not connected to projects_
@@ -9,8 +10,7 @@
 tag:: #cci/services/sundays
 	- We must understand how God expects us to function
 	- Matthew 4:19
-		-
-		  #+BEGIN_QUOTE
+		- #+BEGIN_QUOTE
 		  Follow me , and I will make you fishers of men
 		  #+END_QUOTE
 		- It depicts a call to maturity
